--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ aniso8601==1.2.0
 click==6.7
 cycler==0.10.0
 dj-database-url==0.4.2
-Django==1.9
+Django>=1.9
 Flask==0.12
 Flask-MySQL==1.4.0
 Flask-RESTful==0.3.5
