--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ click==6.7
 cycler==0.10.0
 dj-database-url==0.4.2
 Django>=1.9
-Flask==0.12
+Flask>=0.12.3
 Flask-MySQL==1.4.0
 Flask-RESTful==0.3.5
 Flask-SQLAlchemy==2.2
