--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ Flask-RESTful==0.3.5
 Flask-SQLAlchemy==2.2
 functools32==3.2.3.post2
 itsdangerous==0.24
-Jinja2==2.9.5
+Jinja2>=2.10.1
 MarkupSafe==1.0
 matplotlib==2.0.0
 mysqlclient==1.3.7
@@ -22,7 +22,7 @@ python-dateutil==2.6.0
 pytz==2016.10
 scipy==0.18.1
 six==1.10.0
-SQLAlchemy==1.1.6
+SQLAlchemy>=1.3.0
 subprocess32==3.2.7
 unity-lens-photos==1.0
 Werkzeug==0.11.15
